# Lima-camera-andor3

./: .gitignore  .gitlab-ci.yml  AUTHORS  CMakeLists.txt  NEWS  README  README.md
andor3_plugin.xcodeproj/: project.pbxproj
andor3_plugin.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
cmake/: FindAndor3.cmake  project-config.cmake.in
conda/camera/: meta.yaml
conda/tango/: meta.yaml
doc/: ROI.tbl  index.rst  tango.rst  testing.py  unit-test.py
include/: Anddor3Camera.h  Andor3BinCtrlObj.h  Andor3Camera.h  Andor3DetInfoCtrlObj.h  Andor3Interface.h  Andor3ReconstructionCtrlObj.h  Andor3RoiCtrlObj.h  Andor3SyncCtrlObj.h
python/: __init__.py
sip/: Andor3Camera.sip  Andor3Interface.sip
src/: Anddor3Camera.cpp  Andor3BinCtrlObj.cpp  Andor3Camera.cpp  Andor3DetInfoCtrlObj.cpp  Andor3Interface.cpp  Andor3ReconstructionCtrlObj.cpp  Andor3RoiCtrlObj.cpp  Andor3SyncCtrlObj.cpp  Makefile
tango/: Andor3.py  CMakeLists.txt
